--- a/index.html
+++ b/index.html
@@ -46,40 +46,54 @@
             </button>
           </div>
         </div>
-        <div class="header__bottom">
-          <div class="header__bottom-item dropdown">
-            <div class="dropdown__head">
-              <span>Услуги</span>
-              <svg class="chevron-down" width="9" height="5" viewBox="0 0 9 5" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.75 0.75L4.25 4.25L0.75 0.75" stroke="#94A3B8" stroke-width="1.5" stroke-linecap="round"
-                  stroke-linejoin="round" />
-              </svg>
-            </div>
-            <div class="dropdown__options">
-              <a class="dropdown__options-item" href="#!">
-                <span>Продвижение сайтов в Яндексе</span>
+        <div class="fixed-bottom">
+          <div class="header__bottom">
+            <div class="media-block-el">
+              <a class="header__right-phone" href="#!">
+                <div class="img-box">
+                  <img src="/images/icons/phone.svg" alt="phone">
+                </div>
+                <span>+7 (499) 648-63-38</span>
               </a>
-              <a class="dropdown__options-item" href="#!">
-                <span>Продвижение сайтов в Яндексе</span>
+              <a class="header__right-tg" href="#!">
+                <img src="/images/icons/tg.svg" alt="">
               </a>
+              <a class="blue-btn" href="#!">Оставить заявку</a>
             </div>
+            <div class="header__bottom-item dropdown">
+              <div class="dropdown__head">
+                <span>Услуги</span>
+                <svg class="chevron-down" width="9" height="5" viewBox="0 0 9 5" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.75 0.75L4.25 4.25L0.75 0.75" stroke="#94A3B8" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+              </div>
+              <div class="dropdown__options">
+                <a class="dropdown__options-item" href="#!">
+                  <span>Продвижение сайтов в Яндексе</span>
+                </a>
+                <a class="dropdown__options-item" href="#!">
+                  <span>Продвижение сайтов в Яндексе</span>
+                </a>
+              </div>
+            </div>
+            <a class="header__bottom-item" href="#!">
+              <span>Кейсы</span>
+            </a>
+            <a class="header__bottom-item" href="#!">
+              <span>Команда</span>
+            </a>
+            <a class="header__bottom-item" href="#!">
+              <span>Отзывы</span>
+            </a>
+            <a class="header__bottom-item" href="#!">
+              <span>Блог про SEO</span>
+            </a>
+            <a class="header__bottom-item" href="#!">
+              <span>Контакты</span>
+            </a>
           </div>
-          <a class="header__bottom-item" href="#!">
-            <span>Кейсы</span>
-          </a>
-          <a class="header__bottom-item" href="#!">
-            <span>Команда</span>
-          </a>
-          <a class="header__bottom-item" href="#!">
-            <span>Отзывы</span>
-          </a>
-          <a class="header__bottom-item" href="#!">
-            <span>Блог про SEO</span>
-          </a>
-          <a class="header__bottom-item" href="#!">
-            <span>Контакты</span>
-          </a>
         </div>
       </div>
 
@@ -143,6 +157,7 @@
           <div class="hero__img">
             <img src="/images/img-hero.png" alt="img-hero">
             <div class="quote-box">
+              <img src="/images/icons/quote-blue.svg" alt="">
               <p>
                 Наша цель <br>
                 <b>заявки и трафик</b>,
@@ -2489,7 +2504,7 @@
               </li>
             </ul>
           </div>
-          <div class="footer__top-box">
+          <div class="footer__top-box active">
             <div class="head">
               <h5>Контактная информация</h5>
               <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
