--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                   <div class="successful__cases-top-left">
                     <div class="company-info">
                       <div class="company-logo">
-                        <img src="./images/icons/klinig-logo.svg" alt="">
+                        <img class="" src="./images/klinika-logo.png" alt="" width="100%" height="auto">
                       </div>
                       <div>
                         <h3 class="company-name">Klining24</h3>
@@ -2443,9 +2443,31 @@
               <p>Продвижение также усиливает доверие: сайты, стабильно находящиеся в ТОПе, воспринимаются как надёжные и
                 авторитетные бренды. Дополнительно SEO улучшает сам сайт — скорость загрузки, структуру, юзабилити — и
                 делает его удобным для клиентов и поисковых систем.</p>
+
+
+              <p class="hide-info">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum dolores omnis nobis quaerat molestiae
+                eveniet, adipisci enim perferendis culpa eaque distinctio nesciunt est! Quis sed tenetur impedit magnam.
+                Velit, pariatur?
+              </p>
+              <p class="hide-info">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum dolores omnis nobis quaerat molestiae
+                eveniet, adipisci enim perferendis culpa eaque distinctio nesciunt est! Quis sed tenetur impedit magnam.
+                Velit, pariatur?
+              </p>
+              <p class="hide-info">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum dolores omnis nobis quaerat molestiae
+                eveniet, adipisci enim perferendis culpa eaque distinctio nesciunt est! Quis sed tenetur impedit magnam.
+                Velit, pariatur?
+              </p>
+              <p class="hide-info">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum dolores omnis nobis quaerat molestiae
+                eveniet, adipisci enim perferendis culpa eaque distinctio nesciunt est! Quis sed tenetur impedit magnam.
+                Velit, pariatur?
+              </p>
             </div>
           </div>
-          <a class="btn-outline" href="#!">Читать подробнее</a>
+          <a class="btn-outline" id="show-more-info" href="#!">Читать подробнее</a>
         </div>
         </sectio>
     </main>
